[package]
name = "hyperliquid_rust_sdk"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "Rust SDK for Hyperliquid"
homepage = "https://hyperliquid.xyz/"
readme = "README.md"
documentation = "https://github.com/hyperliquid-dex/hyperliquid-rust-sdk"
repository = "https://github.com/hyperliquid-dex/hyperliquid-rust-sdk"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
env_logger = "0.10.0"
ethers = { workspace = true }
futures-util = { workspace = true }
hex = "0.4.3"
http = "0.2.9"
lazy_static = "1.3"
log = "0.4.19"
rand = "0.8.5"
reqwest = "0.11.18"
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = "1.0.0"
thiserror = "1.0.44"
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
uuid = {version = "1.6.1", features = ["v4"]}
